--- a/step-last.html
+++ b/step-last.html
@@ -55,5 +55,8 @@
         </div>
     </footer>
     <script src="main.js"></script>
+    <script>
+        console.log('sas')
+    </script>
 </body>
 </html>
